Serializers removed, Shape changed into abstract class